# episkos

./: .gitignore  Cargo.toml  bun.lockb  flake.nix  package.json  vite.config.ts
.github/workflows/: docs.yml  sem-rel.yml
episkos_cli/src/: cli.rs  lib.rs  main.rs
episkos_lib/: Cargo.toml  dev.db  manifest.toml
episkos_lib/migrations/: 20250123102716_create_project_tables.down.sql  20250123102716_create_project_tables.up.sql
episkos_lib/src/: db.rs  files.rs  lib.rs  metadata.rs
episkos_lib/src/db/: build_system.rs  category.rs  ide.rs  language.rs  metadata.rs
episkos_lib/src/files/: file_handler.rs  metadata.rs
episkos_lib/src/metadata/: build_system.rs  builder.rs  category.rs  ide.rs  language.rs
src/: app.css
src/lib/components/: app-sidebar.svelte  nav-main.svelte
src/lib/components/ui/input/: input.svelte
src/routes/: +layout.svelte  +page.svelte
