[workspace]
members = ["episkos_gui_backend", "episkos_lib", "episkos_cli"]
resolver = "2"

[workspace.package]
version = "0.0.0-development"
license = "MIT"

[workspace.dependencies]
episkos_lib = { path = "episkos_lib" }
thiserror = "2.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }

