[package]
name = "episkos_lib"
edition = "2021"
version.workspace = true
license.workspace = true

[features]
default = ["files"]
files = []

[dependencies]
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true
thiserror.workspace = true
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "lib_debug"
path = "src/bin/main.rs"
